--- a/Digiservino/style.css
+++ b/Digiservino/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: DigiServino SaaS Theme
+Theme Name: digiservino
 Theme URI: https://example.com
 Author: DigiServino Team
 Author URI: https://example.com
